--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,8 +64,9 @@ services:
     
     # Volúmenes para persistencia de datos
     volumes:
-      - jenkins_home:/var/jenkins_home              # Datos de Jenkins (jobs, configuración, etc)
-      - .:/workspace/movie-webapp                   # Acceso al código del proyecto
+      - jenkins_home:/var/jenkins_home                      # Datos de Jenkins (jobs, configuración, etc)
+      - .:/workspace/movie-webapp                           # Acceso al código del proyecto movie-webapp
+      - ../movie-bff:/workspace/movie-bff                   # Acceso al código del proyecto movie-bff
     
     # Variables de entorno
     environment:
@@ -77,7 +78,6 @@ services:
 networks:
   movie-network:
     external: true
-
 volumes:
   jenkins_home:
     driver: local
