--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "dev": "next dev --webpack",
     "build": "next build --webpack",
     "start": "next start",
-    
     "lint": "eslint",
-    "test": "vitest run",
-    "test:watch": "vitest"
+    "test": "vitest run --coverage",
+    "test:watch": "vitest",
+    "test:ci": "vitest run --coverage --reporter=junit --outputFile=junit.xml"
   },
   "dependencies": {
     "next": "16.0.0",
@@ -25,9 +25,11 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.3.0",
+    "@vitest/coverage-v8": "^2.1.9",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "jsdom": "^24.0.0",
+    "msw": "^2.12.2",
     "tailwindcss": "^4",
     "typescript": "^5",
     "typescript-eslint": "^8.18.2",
